# sample-data-dev

./: LICENSE  README.md  setup.cfg  tox.ini
src/sample_data_dev/: napari.yaml
src/sample_data_dev/_tests/: test_sample_data.py
